@@ -211,18 +211,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.0</version>
-        <executions>
-        <execution>
-          <id>default-test</id>
-          <phase>test</phase>
-          <goals>
-            <goal>test</goal>
-          </goals>
-          <configuration>
-            <argLine>-Xmx1024m -XX:MaxPermSize=256</argLine>
-          </configuration>
-        </execution>
-      </executions>
 
 			</plugin>
 
